--- a/projetos.html
+++ b/projetos.html
@@ -574,5 +574,8 @@
         </div>
     </footer>
     
+    <!-- JavaScript da Experiência Prática III -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/form-validation.js"></script>
 </body>
 </html>
