feat: accessibility and build

--- a/cadastro.html
+++ b/cadastro.html
@@ -642,8 +642,9 @@
         </div>
     </footer>
     
-    <!-- JavaScript da Experiência Prática III -->
+    <!-- JavaScript da Experiência Prática III e IV -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/form-validation.js"></script>
+    <script src="assets/js/accessibility.js"></script>
 </body>
 </html>
